--- a/Resources/views/Menu/navbar.html.twig
+++ b/Resources/views/Menu/navbar.html.twig
@@ -31,7 +31,7 @@
 
         <ul class="nav navbar-nav navbar-right">
           {% if datagrid.menu.showExtended %}
-            <li><a href="{{ dgMacros.dgPath(datagrid.menu.routeExtended) }}" title="{{ 'Erweiterte Felder ein-/ausblenden'|trans }}"><span class="glyphicon {{ datagrid.extended?'glyphicon-resize-full':'glyphicon-resize-small' }}"></span> <span class="visible-xs-inline">{{ 'Erweiterte Felder ein-/ausblenden'|trans }}</span><span class="visible-md-inline visible-lg-inline">{{ 'Extend'|trans }}</span></a></li>
+            <li><a href="{{ dgMacros.dgPath(datagrid.menu.routeExtended) }}" title="{{ 'Erweiterte Felder ein-/ausblenden'|trans }}"><span class="glyphicon {{ datagrid.extended?'glyphicon-resize-small':'glyphicon-resize-full' }}"></span> <span class="visible-xs-inline">{{ 'Erweiterte Felder ein-/ausblenden'|trans }}</span><span class="visible-md-inline visible-lg-inline">{{ 'Extend'|trans }}</span></a></li>
           {% endif %}
           {% if datagrid.menu.showReset %}
             <li><a href="{{ dgMacros.dgPath(datagrid.menu.routeReset) }}" title="{{ 'Sortierung und Filter zurücksetzen'|trans }}"><span class="glyphicon glyphicon-flash"></span> <span class="visible-xs-inline">{{ 'Sortierung/Filter zurücksetzen'|trans }}</span><span class="visible-md-inline visible-lg-inline">{{ 'Reset'|trans }}</span></a></li>
