--- a/Resources/views/Menu/navbar.html.twig
+++ b/Resources/views/Menu/navbar.html.twig
@@ -30,10 +30,10 @@
         {% endif %}
 
         <ul class="nav navbar-nav navbar-right">
-          {% if datagrid.menu.showExtended %}
+          {% if datagrid.menu.showExtended and datagrid.menu.routeExtended %}
             <li><a href="{{ dgMacros.dgPath(datagrid.menu.routeExtended) }}" title="{{ 'Erweiterte Felder ein-/ausblenden'|trans }}"><span class="glyphicon {{ datagrid.extended?'glyphicon-resize-small':'glyphicon-resize-full' }}"></span> <span class="visible-xs-inline">{{ 'Erweiterte Felder ein-/ausblenden'|trans }}</span><span class="visible-md-inline visible-lg-inline">{{ 'Extend'|trans }}</span></a></li>
           {% endif %}
-          {% if datagrid.menu.showReset %}
+          {% if datagrid.menu.showReset and datagrid.menu.routeReset %}
             <li><a href="{{ dgMacros.dgPath(datagrid.menu.routeReset) }}" title="{{ 'Sortierung und Filter zurücksetzen'|trans }}"><span class="glyphicon glyphicon-flash"></span> <span class="visible-xs-inline">{{ 'Sortierung/Filter zurücksetzen'|trans }}</span><span class="visible-md-inline visible-lg-inline">{{ 'Reset'|trans }}</span></a></li>
           {% endif %}
           {% if datagrid.menu.showMaxEntriesSelection %}
@@ -44,7 +44,7 @@
         {% if datagrid.menu.showSearch and datagrid.menu.searchFields|length > 0 %}
           <form class="datagrid-search navbar-form navbar-left" role="search" action="{{ dgMacros.dgPath(datagrid.menu.routeSearch) }}" method="post">
 
-            {% for searchKey, searchField in datagrid.menu.searchFields %}
+            {% for searchKey, searchField in datagrid.menu.searchFields if (not datagrid.extended and not searchField['extended']) or datagrid.extended %}
               <div class="form-group">
                 {% if searchField['type'] == 'number' %}
                   {% include 'HBMDatagridBundle:Menu/search-fields:number.html.twig' with { 'datagrid': datagrid, 'searchKey': searchKey, 'searchField': searchField } only %}
