Add optgroup functionality for filters.

--- a/Resources/views/Menu/search-fields/select.html.twig
+++ b/Resources/views/Menu/search-fields/select.html.twig
@@ -1,10 +1,17 @@
 <div class="input-group input-group-sm">
-	<span class="input-group-addon">{{ searchField['label']|trans }}</span>
-	<select class="form-control" name="{{ searchKey }}">
-		<option></option>
-{% set keys = datagrid.menu.searchValue(searchKey) %}
-{% for key, value in searchField['values'] %}
-		<option value="{{ key }}" {% if (keys is iterable and key in keys) or (keys is not iterable and key == keys) %}selected{% endif %}>{{ value }}</option>
-{% endfor %}
-	</select>
+  <span class="input-group-addon">{{ searchField['label']|trans }}</span>
+  <select class="form-control" name="{{ searchKey }}">
+    <option></option>
+    {% set keys = datagrid.menu.searchValue(searchKey) %}
+    {% for key, value in searchField['values'] %}
+      <option value="{{ key }}" {% if (keys is iterable and key in keys) or (keys is not iterable and key == keys) %}selected{% endif %}>{{ value }}</option>
+    {% endfor %}
+    {% for optgroupLabel, optgroupValues in searchField['optgroups'] %}
+      <optgroup label="{{ optgroupLabel }}">
+        {% for key, value in optgroupValues %}
+          <option value="{{ key }}" {% if (keys is iterable and key in keys) or (keys is not iterable and key == keys) %}selected{% endif %}>{{ value }}</option>
+        {% endfor %}
+      </optgroup>
+    {% endfor %}
+  </select>
 </div>
