--- a/Resources/views/Menu/search-fields/select.html.twig
+++ b/Resources/views/Menu/search-fields/select.html.twig
@@ -3,15 +3,19 @@
   <select class="form-control" name="{{ searchKey }}">
     <option></option>
     {% set keys = datagrid.menu.searchValue(searchKey) %}
-    {% for key, value in searchField['values'] %}
-      <option value="{{ key }}" {% if (keys is iterable and key in keys) or (keys is not iterable and key == keys) %}selected{% endif %}>{{ value }}</option>
-    {% endfor %}
-    {% for optgroupLabel, optgroupValues in searchField['optgroups'] %}
-      <optgroup label="{{ optgroupLabel }}">
-        {% for key, value in optgroupValues %}
-          <option value="{{ key }}" {% if (keys is iterable and key in keys) or (keys is not iterable and key == keys) %}selected{% endif %}>{{ value }}</option>
-        {% endfor %}
-      </optgroup>
-    {% endfor %}
+    {% if searchField['values'] is defined %}
+      {% for key, value in searchField['values'] %}
+        <option value="{{ key }}" {% if (keys is iterable and key in keys) or (keys is not iterable and key == keys) %}selected{% endif %}>{{ value }}</option>
+      {% endfor %}
+    {% endif %}
+    {% if searchField['values'] is defined %}
+      {% for optgroupLabel, optgroupValues in searchField['optgroups'] %}
+        <optgroup label="{{ optgroupLabel }}">
+          {% for key, value in optgroupValues %}
+            <option value="{{ key }}" {% if (keys is iterable and key in keys) or (keys is not iterable and key == keys) %}selected{% endif %}>{{ value }}</option>
+          {% endfor %}
+        </optgroup>
+      {% endfor %}
+    {% endif %}
   </select>
 </div>
