--- a/Resources/views/Datagrid/table-head-th.html.twig
+++ b/Resources/views/Datagrid/table-head-th.html.twig
@@ -1,25 +1,28 @@
 {% import 'HBMDatagridBundle::macros.html.twig' as dgMacros %}
 
 {% if cell.theadLinks|length > 0 %}
-  {% if cell.theadLinks|length > 1 %}
+  {%- if cell.theadLinks|length > 1 and cell.labelPos == 'before' -%}
     {{ cell.label|trans|raw }}
-  {% endif %}
-  {% for sortKey, theadLink in cell.theadLinks %}
+  {%- endif -%}
+  {%- for sortKey, theadLink in cell.theadLinks -%}
     <a href="{{ dgMacros.dgPath(theadLink) }}" title="{{ 'Sortieren nach: '|trans }} {{ cell.getSortKeyLabel(sortKey)|trans }}">
-      {{ cell.getSortKeyLabel(sortKey)|trans|raw }}
-      {% if datagrid.isSorted(sortKey) %}
-        {% if datagrid.getSortationDirection(sortKey) == 'asc' %}
-          <span class="glyphicon glyphicon glyphicon-sort-by-attributes"></span>
-        {% endif %}
-        {% if datagrid.getSortationDirection(sortKey) == 'desc' %}
-          <span class="glyphicon glyphicon glyphicon-sort-by-attributes-alt"></span>
-        {% endif %}
-      {% endif %}
+      {{- cell.getSortKeyLabel(sortKey)|trans|raw -}}
+      {%- if datagrid.isSorted(sortKey) -%}
+        {%- if datagrid.getSortationDirection(sortKey) == 'asc' -%}
+          &nbsp;<span class="glyphicon glyphicon glyphicon-sort-by-attributes"></span>
+        {%- endif -%}
+        {%- if datagrid.getSortationDirection(sortKey) == 'desc' -%}
+          &nbsp;<span class="glyphicon glyphicon glyphicon-sort-by-attributes-alt"></span>
+        {%- endif -%}
+      {%- endif -%}
     </a>
-    {% if not loop.last %}
-      {{ cell.getSortKeySep }}
-    {% endif %}
-  {% endfor %}
+    {%- if not loop.last -%}
+      {{ cell.getSortKeySep|raw }}
+    {%- endif -%}
+  {%- endfor -%}
+  {%- if cell.theadLinks|length > 1 and cell.labelPos == 'after' -%}
+    {{ cell.label|trans|raw }}
+  {%- endif -%}
 {% else %}
-	{{ cell.label|trans|raw }}
+  {{ cell.label|trans|raw }}
 {% endif %}
