Add datagrid css classes.

--- a/Resources/views/Datagrid/table-body.html.twig
+++ b/Resources/views/Datagrid/table-body.html.twig
@@ -1,4 +1,4 @@
-<tbody>
+<tbody class="datagrid-table-body">
 	{% for row, obj in datagrid.results %}
 		<tr>
 			{% for column, cell in datagrid.cells if not cell.extended or datagrid.extended %}
