--- a/Resources/views/Menu/navbar.html.twig
+++ b/Resources/views/Menu/navbar.html.twig
@@ -3,7 +3,7 @@
 {% set datagrid_menu_id = 'datagrid-'~random()~'-menu' %}
 
 {% if datagrid.menu.show %}
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-default datagrid-menu" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
         {% if datagrid.menu.showHeader %}
