--- a/Resources/views/Pagination/pagination.html.twig
+++ b/Resources/views/Pagination/pagination.html.twig
@@ -1,7 +1,7 @@
 {% import 'HBMDatagridBundle::macros.html.twig' as dgMacros %}
 
 {% if pagination.pageMax > 1 %}
-<div class="text-center">
+<div class="datagrid-pagination">
     <ul class="pagination">
 
 	{% if pagination.linkFirst is not null and pagination.showFirst %}
