--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -3,7 +3,7 @@
 {% if datagrid.results|length == 0 %}
 	<p>{{ 'Keine Einträge gefunden.'|trans }}</p>
 {% else %}
-<table class="table table-hover table-bordered table-condensed">
+<table class="table table-hover table-bordered table-condensed datagrid-table">
 	{% include 'HBMDatagridBundle:Datagrid:table-head.html.twig' with { 'datagrid': datagrid } only %}
 
 	{% include 'HBMDatagridBundle:Datagrid:table-body.html.twig' with { 'datagrid': datagrid } only %}
