--- a/Resources/views/Datagrid/table-head.html.twig
+++ b/Resources/views/Datagrid/table-head.html.twig
@@ -1,6 +1,6 @@
 {% import 'HBMDatagridBundle::macros.html.twig' as dgMacros %}
 
-<thead>
+<thead class="datagrid-table-head">
 	<tr>
 		{% for column, cell in datagrid.cells if not cell.extended or datagrid.extended %}
 			 <th {{ cell.attr('th')|raw }}>
