--- a/Resources/views/macros.html.twig
+++ b/Resources/views/macros.html.twig
@@ -1,1 +1,3 @@
 {% macro dgPath(route) %}{{ path(route.name, route.merged) }}{% endmacro %}
+
+{% macro dgTrans(text) %}(translation_domain is same as(false) ? text : text|trans({}, translation_domain)){% endmacro %}
