Add translation domain config.

--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -1,3 +1,5 @@
+{% translation_domain datagrid.translationDomain %}
+
 {% include datagrid.menu.template with { 'datagrid': datagrid } only %}
 
 {% if datagrid.results|length == 0 %}
