--- a/Resources/views/Datagrid/table-body.html.twig
+++ b/Resources/views/Datagrid/table-body.html.twig
@@ -1,12 +1,12 @@
 <tbody class="datagrid-table-body">
-	{% for row, obj in datagrid.results %}
-		<tr>
-			{% for column, cell in datagrid.cells if not cell.extended or datagrid.extended %}
-				<td {{ cell.attr('td')|raw }}>
-					{% include cell.template(column, row, obj) with cell.templateParams(column, row, obj)|merge({ 'datagrid': datagrid, 'cell': cell, 'column': column, 'row': row, 'obj': obj }) only %}
-				</td>
-			{% endfor %}
-		</tr>
-	{% endfor %}
+{% for row, obj in datagrid.results %}
+  <tr>
+    {% for column, cell in datagrid.cells if not cell.extended or datagrid.extended %}
+      <td {{ cell.attr('td')|raw }}>
+        {% include cell.template(column, row, obj) with cell.templateParams(column, row, obj)|merge({ 'datagrid': datagrid, 'cell': cell, 'column': column, 'row': row, 'obj': obj, 'transDomain': transDomain }) only %}
+      </td>
+    {% endfor %}
+  </tr>
+{% endfor %}
 </tbody>
 
