--- a/Resources/views/Datagrid/table-head.html.twig
+++ b/Resources/views/Datagrid/table-head.html.twig
@@ -1,12 +1,12 @@
 {% import 'HBMDatagridBundle::macros.html.twig' as dgMacros %}
 
 <thead class="datagrid-table-head">
-	<tr>
-		{% for column, cell in datagrid.cells if not cell.extended or datagrid.extended %}
-			 <th {{ cell.attr('th')|raw }}>
-			 	{% include 'HBMDatagridBundle:Datagrid:table-head-th.html.twig' with { 'datagrid': datagrid, 'cell': cell, 'column': column } only %}
-			 </th>
-		{% endfor %}
-	</tr>
+  <tr>
+    {% for column, cell in datagrid.cells if not cell.extended or datagrid.extended %}
+      <th {{ cell.attr('th')|raw }}>
+        {% include 'HBMDatagridBundle:Datagrid:table-head-th.html.twig' with { 'datagrid': datagrid, 'cell': cell, 'column': column, 'transDomain': transDomain } only %}
+      </th>
+    {% endfor %}
+  </tr>
 </thead>
 
