Add default trans domain.

--- a/Resources/views/Datagrid/table-body.html.twig
+++ b/Resources/views/Datagrid/table-body.html.twig
@@ -1,3 +1,5 @@
+{% trans_default_domain "HBMDatagridBundle" %}
+
 <tbody class="datagrid-table-body">
 {% for row, obj in datagrid.results %}
   <tr>
