--- a/Resources/views/Datagrid/table-head.html.twig
+++ b/Resources/views/Datagrid/table-head.html.twig
@@ -1,3 +1,5 @@
+{% trans_default_domain "HBMDatagridBundle" %}
+
 {% import 'HBMDatagridBundle::macros.html.twig' as dgMacros %}
 
 <thead class="datagrid-table-head">
