--- a/Resources/views/Pagination/pagination.html.twig
+++ b/Resources/views/Pagination/pagination.html.twig
@@ -1,3 +1,5 @@
+{% trans_default_domain "HBMDatagridBundle" %}
+
 {% import 'HBMDatagridBundle::macros.html.twig' as dgMacros %}
 
 {% if pagination.pageMax > 1 %}
