--- a/Resources/views/Datagrid/table-cell.html.twig
+++ b/Resources/views/Datagrid/table-cell.html.twig
@@ -1,3 +1,5 @@
+{% trans_default_domain "HBMDatagridBundle" %}
+
 {% import 'HBMDatagridBundle::macros.html.twig' as dgMacros %}
 
 {% if cell.route %}
