--- a/Resources/views/Menu/max-entries-selection.html.twig
+++ b/Resources/views/Menu/max-entries-selection.html.twig
@@ -1,3 +1,5 @@
+{% trans_default_domain "HBMDatagridBundle" %}
+
 {% import 'HBMDatagridBundle::macros.html.twig' as dgMacros %}
 
 {% if datagrid.menu.links|length > 0 %}
