--- a/Resources/views/Menu/navbar.html.twig
+++ b/Resources/views/Menu/navbar.html.twig
@@ -1,3 +1,5 @@
+{% trans_default_domain "HBMDatagridBundle" %}
+
 {% import 'HBMDatagridBundle::macros.html.twig' as dgMacros %}
 
 {% set datagrid_menu_id = 'datagrid-'~random()~'-menu' %}
