--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -1,3 +1,5 @@
+{% trans_default_domain "HBMDatagridBundle" %}
+
 {% set transDomain = datagrid.translationDomain %}
 
 {% include datagrid.menu.template with { 'datagrid': datagrid, 'transDomain': transDomain } only %}
