--- a/Resources/views/macros.html.twig
+++ b/Resources/views/macros.html.twig
@@ -1,3 +1,3 @@
 {% macro dgPath(route) %}{{ path(route.name, route.merged) }}{% endmacro %}
 
-{% macro dgTrans(text) %}(transDomain is same as(false) ? text : text|trans({}, transDomain)){% endmacro %}
+{% macro dgTrans(text) %}{{ (transDomain is same as(false) ? text : text|trans({}, transDomain)) }}{% endmacro %}
