--- a/Resources/views/Datagrid/table-head.html.twig
+++ b/Resources/views/Datagrid/table-head.html.twig
@@ -1,6 +1,6 @@
 {% trans_default_domain "HBMDatagridBundle" %}
 
-{% import 'HBMDatagridBundle::macros.html.twig' as dgMacros %}
+{% import 'HBMDatagridBundle::macros.html.twig' as dg %}
 
 <thead class="datagrid-table-head">
   <tr>
