--- a/Resources/views/Menu/search-fields/select.html.twig
+++ b/Resources/views/Menu/search-fields/select.html.twig
@@ -1,9 +1,9 @@
 {% trans_default_domain "HBMDatagridBundle" %}
 
-{% import 'HBMDatagridBundle::macros.html.twig' as dgMacros %}
+{% import 'HBMDatagridBundle::macros.html.twig' as dg %}
 
 <div class="input-group input-group-sm">
-  <span class="input-group-addon">{{ dgMacros.dgTrans(searchField['label']) }}</span>
+  <span class="input-group-addon">{{ dg.trans(searchField['label'], transDomain) }}</span>
   <select class="form-control" name="{{ searchKey }}">
     <option></option>
     {% set keys = datagrid.menu.searchValue(searchKey) %}
