--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -4,10 +4,17 @@
 
 {% include datagrid.menu.template with { 'datagrid': datagrid, 'transDomain': transDomain } only %}
 
+
+{% set classesTable = 'table table-hover table-bordered table-condensed datagrid-table' %}
+{% if datagrid.bootstrap == 'v4' %}
+  {% set classesTable = 'table table-hover table-bordered table-sm datagrid-table' %}
+{% endif %}
+
+
 {% if datagrid.results|length == 0 %}
   <p>{{ 'Keine Einträge gefunden.'|trans }}</p>
 {% else %}
-  <table class="table table-hover table-bordered table-condensed datagrid-table">
+  <table class="{{ classesTable }}">
     {% include 'HBMDatagridBundle:Datagrid:table-head.html.twig' with { 'datagrid': datagrid, 'transDomain': transDomain } only %}
 
     {% include 'HBMDatagridBundle:Datagrid:table-body.html.twig' with { 'datagrid': datagrid, 'transDomain': transDomain } only %}
