--- a/Resources/views/Pagination/pagination.html.twig
+++ b/Resources/views/Pagination/pagination.html.twig
@@ -2,73 +2,90 @@
 
 {% import 'HBMDatagridBundle::macros.html.twig' as dg %}
 
+
+{% set classesPaginationItem = '' %}
+{% set classesPaginationLink = '' %}
+{% set classesFirst = 'glyphicon glyphicon-fast-backward' %}
+{% set classesPrev = 'glyphicon glyphicon-step-backward' %}
+{% set classesNext = 'glyphicon glyphicon-step-forward' %}
+{% set classesLast = 'glyphicon glyphicon-fast-forward' %}
+{% if datagrid.bootstrap == 'v4' %}
+  {% set classesPaginationItem = 'page-item ' %}
+  {% set classesPaginationLink = 'page-link ' %}
+  {% set classesFirst = 'fa fa-fast-backward' %}
+  {% set classesPrev = 'fa fa-step-backward' %}
+  {% set classesNext = 'fa fa-step-forward' %}
+  {% set classesLast = 'fa fa-fast-forward' %}
+{% endif %}
+
+
 {% if pagination.pageMax > 1 %}
   <div class="datagrid-pagination">
     <ul class="pagination">
 
       {% if pagination.linkFirst is not null and pagination.showFirst %}
-        <li>
-          <a href="{{ dg.path(pagination.linkFirst) }}" title="{{ 'Erste Seite'|trans }}"><span class="glyphicon glyphicon-fast-backward"></span></a>
+        <li class="{{ classesPaginationItem }}">
+          <a class="{{ classesPaginationLink }}" href="{{ dg.path(pagination.linkFirst) }}" title="{{ 'Erste Seite'|trans }}"><span class="{{ classesFirst }}"></span></a>
         </li>
       {% elseif pagination.showFirst %}
-        <li class="disabled">
-          <span><span class="glyphicon glyphicon-fast-backward"></span></span>
+        <li class="{{ classesPaginationItem }}disabled">
+          <span class="{{ classesPaginationLink }}"><span class="{{ classesFirst }}"></span></span>
         </li>
       {% endif %}
 
       {% if pagination.linkPrev is not null and pagination.showPrev %}
-        <li>
-          <a href="{{ dg.path(pagination.linkPrev) }}" title="{{ 'Vorherige Seite'|trans }}"><span class="glyphicon glyphicon-step-backward"></span></a>
+        <li class="{{ classesPaginationItem }}">
+          <a class="{{ classesPaginationLink }}" href="{{ dg.path(pagination.linkPrev) }}" title="{{ 'Vorherige Seite'|trans }}"><span class="{{ classesPrev }}"></span></a>
         </li>
       {% elseif pagination.showPrev %}
-        <li class="disabled">
-          <span><span class="glyphicon glyphicon-step-backward"></span></span>
+        <li class="{{ classesPaginationItem }}disabled">
+          <span class="{{ classesPaginationLink }}"><span class="{{ classesPrev }}"></span></span>
         </li>
       {% endif %}
 
 
       {% for link in pagination.links %}
         {% if link.value == pagination.pageFrom and link.value > 1 and pagination.showSep %}
-          <li class="disabled">
-            <span>...</span>
+          <li class="{{ classesPaginationItem }}disabled">
+            <span class="{{ classesPaginationLink }}">...</span>
           </li>
         {% endif %}
 
         {% if link.value != pagination.pageCurrent %}
-          <li>
-            <a href="{{ dg.path(link) }}">{{ link.value }}</a>
+          <li class="{{ classesPaginationItem }}">
+            <a class="{{ classesPaginationLink }}" href="{{ dg.path(link) }}">{{ link.value }}</a>
           </li>
         {% else %}
-          <li class="active">
-            <span>{{ link.value }}</span>
+          <li class="{{ classesPaginationItem }}active">
+            <span class="{{ classesPaginationLink }}">{{ link.value }}</span>
           </li>
         {% endif %}
 
         {% if link.value == pagination.pageThru and link.value < pagination.pageMax and pagination.showSep %}
-          <li class="disabled">
-            <span>...</span>
+          <li class="{{ classesPaginationItem }}disabled">
+            <span class="{{ classesPaginationLink }}">...</span>
           </li>
         {% endif %}
       {% endfor %}
 
 
       {% if pagination.linkNext is not null and pagination.showNext %}
-        <li>
-          <a href="{{ dg.path(pagination.linkNext) }}" title="{{ 'Nächste Seite'|trans }}"><span class="glyphicon glyphicon-step-forward"></span></a>
+        <li class="{{ classesPaginationItem }}">
+          <a class="{{ classesPaginationLink }}" href="{{ dg.path(pagination.linkNext) }}" title="{{ 'Nächste Seite'|trans }}"><span class="{{ classesNext }}"></span></a>
         </li>
       {% elseif pagination.showNext %}
-        <li class="disabled">
-          <span><span class="glyphicon glyphicon-step-forward"></span></span>
+        <li class="{{ classesPaginationItem }}disabled">
+          <span class="{{ classesPaginationLink }}"><span class="{{ classesNext }}"></span></span>
         </li>
       {% endif %}
 
       {% if pagination.linkLast is not null and pagination.showLast %}
-        <li>
-          <a href="{{ dg.path(pagination.linkLast) }}" title="{{ 'Letzte Seite'|trans }}"><span class="glyphicon glyphicon-fast-forward"></span></a>
+        <li class="{{ classesPaginationItem }}">
+          <a class="{{ classesPaginationLink }}" href="{{ dg.path(pagination.linkLast) }}" title="{{ 'Letzte Seite'|trans }}"><span class="{{ classesLast }}"></span></a>
         </li>
       {% elseif pagination.showLast %}
-        <li class="disabled">
-          <span><span class="glyphicon glyphicon-fast-forward"></span></span>
+        <li class="{{ classesPaginationItem }}disabled">
+          <span class="{{ classesPaginationLink }}"><span class="{{ classesLast }}"></span></span>
         </li>
       {% endif %}
     </ul>
