--- a/Resources/views/Datagrid/table-body.html.twig
+++ b/Resources/views/Datagrid/table-body.html.twig
@@ -5,7 +5,7 @@
   <tr>
     {% for column, cell in datagrid.cells if not cell.extended or datagrid.extended %}
       <td {{ cell.attr('td')|raw }}>
-        {% include cell.template(column, row, obj) with cell.templateParams(column, row, obj)|merge({ 'datagrid': datagrid, 'cell': cell, 'column': column, 'row': row, 'obj': obj, 'transDomain': transDomain }) only %}
+        {% include cell.template(obj, column, row) with cell.templateParams(obj, column, row)|merge({ 'datagrid': datagrid, 'cell': cell, 'column': column, 'row': row, 'obj': obj, 'transDomain': transDomain }) only %}
       </td>
     {% endfor %}
   </tr>
