--- a/Resources/views/Datagrid/table-head.html.twig
+++ b/Resources/views/Datagrid/table-head.html.twig
@@ -4,7 +4,7 @@
 
 <thead class="datagrid-table-head">
   <tr>
-    {% for column, cell in datagrid.cells if not cell.extended or datagrid.extended %}
+    {% for column, cell in datagrid.cells if (cell.isVisibleNormal and not datagrid.extended) or (cell.isVisibleExtended and datagrid.extended) %}
       <th {{ cell.attr('th')|raw }}>
         {% include 'HBMDatagridBundle:Datagrid:table-head-th.html.twig' with { 'datagrid': datagrid, 'cell': cell, 'column': column, 'transDomain': transDomain } only %}
       </th>
